--- a/src/Bonsai.Gui/Bonsai.Gui.csproj
+++ b/src/Bonsai.Gui/Bonsai.Gui.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <Title>Bonsai - GUI</Title>
-    <Description>Bonsai Library for composing user interfaces and real-time graphs.</Description>
-    <PackageTags>Bonsai Rx GUI Graphical User Interface Visualizers</PackageTags>
+    <Description>Bonsai Library for composing reactive user interfaces.</Description>
+    <PackageTags>Bonsai Rx GUI Graphical User Interface</PackageTags>
     <TargetFrameworks>net472</TargetFrameworks>
     <UseWindowsForms>true</UseWindowsForms>
     <VersionPrefix>0.1.0</VersionPrefix>
@@ -11,7 +11,6 @@
 
   <ItemGroup>
     <PackageReference Include="Bonsai.Design" Version="2.8.0" />
-    <PackageReference Include="ZedGraph" Version="5.1.7" />
   </ItemGroup>
 
 </Project>
